# GateWay

./: CMakeLists.txt  README.md
bdb/: Assert_bind_net.c  Assert_bind_net.cpp  CMakeLists.txt  DataFileManager.c  FileManager.c  FileManager.h  Makefile  Readme.md  cmake_install.cmake  forlder_util.c  forlder_util.h  getcwd.cpp  link_table.c  link_table.h  local_ip_port_init.c  logManager.c  logManager.h  mutex_lock.c  opendir.cpp  popen.c  popen.h  search_dir.c  search_dir.h  seml.c  shmread.c  shmwrite.c
crc/: CMakeLists.txt  Makefile  cmake_install.cmake  crc32.c  crc32.h  crc_test  crc_test.c
des/: 3desApp.C  CMakeLists.txt  Makefile  cmake_install.cmake  d3des.c  d3des.h  des_test.c  destest
qt-prj/VirtualPort/: VirtualPort.c  VirtualPort.pro  build_configure.h
socket/: CMakeCache.txt  CMakeLists.txt  Makefile  Packet.c  Packet.h  Unpacket.c  Unpacket.h  VirtualPortMonitor  VirtualPortMonitor.c  VirtualPortMonitor.h  cmake_install.cmake  readme.md  socket_protocol_thread.c  socket_protocol_thread.h
socket/AppLayer/: AysnchronousWork.c  AysnchronousWork.h  keep_alive_handle.c  keep_alive_handle.h  semaphore_op.c  semaphore_op.h
socket/protoBuf/: epb_emergency_open_pack.c  epb_emergency_open_pack.h  epb_keep_alive_pack.c  epb_keep_alive_pack.h  epb_remote_authorize_pack.c  epb_remote_authorize_pack.h  epb_remote_config_pack.c  epb_remote_config_pack.h  epb_remote_get_config_pack.c  epb_remote_get_config_pack.h  epb_remote_load_pack.c  epb_remote_load_pack.h  epb_remote_open_pack.c  epb_remote_open_pack.h  epb_report_log_pack.c  epb_report_log_pack.h  epb_set_lora_param_pack.c  epb_set_lora_param_pack.h
socket/pub/: epb.c  epb.h  epb_MmBp.c  epb_MmBp.h  util.c  util.h  util_date.c  util_date.h
uart/: CMakeLists.txt  ConfigCommandAnalysis.c  ConfigCommandAnalysis.h  Makefile  Readme.txt  UartPacket.c  UartPacket.h  UartUnpacket.c  UartUnpacket.h  WorkCommandAnalysis.c  WorkCommandAnalysis.h  cmake_install.cmake  socket_task_distributer.c  socket_task_distributer.h  xxx_channel_send_thread.c  xxx_channel_send_thread.h
uart/Cmd/: emergency_open_pack.c  emergency_open_pack.h  readme.txt  register_log_pack.c  remote_authorize_pack.c  remote_authorize_pack.h  remote_change_channel_pack.c  remote_config_pack.c  remote_config_pack.h  remote_load_pack.c  remote_load_pack.h  remote_open_pack.c  remote_open_pack.h  report_history_log_pack.c  report_log_pack.c  report_log_pack.h  u_set_lora_para_pack.c  u_set_lora_para_pack.h
uart/LinkLayer/: UartOpration.c  UartOpration.h  first_listener_thread.c  fourth_listener_thread.c  lora_parament.c  lora_parament.h  second_listener_thread.c  third_listener_thread.c  uart_listener_thread.c  uart_listener_thread.h
util/: CMakeLists.txt  Makefile  cmake_install.cmake  code_value_change.c  code_value_change.h  pthread_data_copy.c  pthread_data_copy.h  trim.c  trim.h
